--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "portfolio app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "keywords": [
     "Digvijaysinh",
